--- a/__gatsby/src/components/layout.css
+++ b/__gatsby/src/components/layout.css
@@ -43,11 +43,13 @@ a {
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
     text-decoration: none;
-    color: rebeccapurple;
+    color: teal;
+    transition: color 0.4s ease-in-out;
 }
 a:active,
 a:hover {
     outline-width: 0;
+    color: inherit;
 }
 abbr[title] {
     border-bottom: none;
